# automaton-state-machine

./: CMakeLists.txt  README.md  Vagrantfile  tester.in  tester1.in  tester2.in  unpack.sh  validator.in
examples/: pipes.c  queue_child.c  queue_parent.c
src/: array_lists.c  array_lists.h  automaton.h  automaton_config.h  autovalidator.c  dynamic_lists.c  dynamic_lists.h  fork.h  gc.h  gcinit.h  generics.h  getline.h  hashmap.h  memalloc.h  msg_pipe.h  msg_queue.h  onexit.h  run.c  serialize.h  str_util.h  syserr.h  syslog.h  tester.c  utils.h  validator.c
